--- a/app/src/main/res/drawable/text_view_border.xml
+++ b/app/src/main/res/drawable/text_view_border.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners
+        android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/kou_green" />
+        android:color="@color/textViewBorderColor" />
 </shape>
