--- a/app/src/main/res/layout/activity_cap.xml
+++ b/app/src/main/res/layout/activity_cap.xml
@@ -34,6 +34,7 @@
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <AutoCompleteTextView
@@ -56,6 +57,7 @@
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
             app:endIconMode="clear_text"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <EditText
@@ -81,6 +83,7 @@
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
             app:endIconMode="clear_text"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <EditText
@@ -106,6 +109,7 @@
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <AutoCompleteTextView
@@ -120,28 +124,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
-                android:layout_width="250dp"
+            <TextView
+                android:id="@+id/textView_cap_fileStateTranscript"
+                android:layout_width="270dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
-                android:textAllCaps="false"
-                android:textColor="#302D2D"
-                android:backgroundTint="#D9D8D9"
+                android:background="@drawable/text_view_border"
                 android:onClick="selectFileTranscript"
+                android:padding="15dp"
                 android:text="Transkript Ekle"
+                android:textAllCaps="false"
+                android:textColor="@color/textViewGrayColor"
                 android:textSize="16dp" />
 
             <ImageView
                 android:id="@+id/image_cap_fileStateTranscript"
                 android:layout_width="50dp"
-                android:src="@drawable/no"
+                android:layout_height="50dp"
                 android:layout_margin="15dp"
                 android:layout_marginTop="30dp"
-                android:layout_height="50dp"/>
+                android:src="@drawable/no" />
         </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="-12dp"
+            android:text="*Zorunlu Alan"
+            android:textColor="@color/red_helper"
+            android:textSize="12dp" />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
