--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="SearchFragmentBgColor">#03A9F4</color>
     <color name="ProfileFragmentBgColor">#8BC34A</color>
     <color name="transparent">#00000000</color>
+    <color name="textViewBorderColor">#949494</color>
+    <color name="textViewGrayColor">#5E5E5E</color>
 </resources>
