--- a/app/src/main/res/layout/fragment_student_login.xml
+++ b/app/src/main/res/layout/fragment_student_login.xml
@@ -74,16 +74,38 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginTop="10dp"
+        android:layout_gravity="left"
         android:layout_marginBottom="30dp"
+        android:gravity="center"
         android:orientation="horizontal">
+
+        <Switch
+            android:id="@+id/switch_studentLogin_RememberMe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="left"
+            android:textColor="@color/textViewGrayColor"
+            android:textSize="10dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="buttonRegisterPage"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Beni Hatırla"
+            android:textColor="@color/textViewGrayColor"
+            android:textSize="10dp"
+            android:layout_marginRight="75dp"
+            android:textStyle="bold"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/buttonStudentLoginRegisterPage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
             android:layout_marginRight="3dp"
             android:onClick="buttonRegisterPage"
             android:text="Kayıt Ol "
@@ -103,13 +125,12 @@
             android:id="@+id/textStudentLoginForgetPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
             android:layout_marginLeft="3dp"
-            android:layout_marginTop="15dp"
             android:onClick="buttonForgetPasswordPage"
             android:text="Şifremi Unuttum!"
             android:textColor="#000000"
             android:textSize="12dp"
+            android:layout_marginRight="10dp"
             android:textStyle="bold"
             tools:ignore="TouchTargetSizeCheck" />
 
@@ -121,6 +142,7 @@
         android:layout_width="750px"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/kou_green"
         android:text="Giriş Yap"
         android:textAlignment="center" />
