--- a/app/src/main/res/layout/activity_yaz_okulu.xml
+++ b/app/src/main/res/layout/activity_yaz_okulu.xml
@@ -248,8 +248,6 @@
             android:id="@+id/yazOkulu_linearLayoutTakeLesson1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
@@ -348,7 +346,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:onClick="yazOkuluTakeLessonAdd"
@@ -371,7 +369,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="4dp"
             android:text="*Zorunlu Alan"
             android:textColor="@color/red_helper"
             android:textSize="12dp" />
@@ -381,6 +380,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
