--- a/app/src/main/res/layout/activity_intibak.xml
+++ b/app/src/main/res/layout/activity_intibak.xml
@@ -121,8 +121,8 @@
             android:layout_marginTop="20dp"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
-            app:helperText="*Zorunlu Alan"
             app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <EditText
@@ -291,8 +291,8 @@
             android:layout_marginTop="20dp"
             app:boxCornerRadiusBottomEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
-            app:helperText="*Zorunlu Alan"
             app:boxStrokeColor="@color/kou_green"
+            app:helperText="*Zorunlu Alan"
             app:helperTextTextColor="@color/red_helper">
 
             <EditText
@@ -464,14 +464,94 @@
             android:textColor="@color/red_helper"
             android:textSize="12dp" />
 
+        <!--Transkript-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_intibak_fileStateTranscript"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/text_view_border"
+                android:onClick="selectFileTranscript"
+                android:padding="15dp"
+                android:text="Transkript Ekle"
+                android:textAllCaps="false"
+                android:textColor="@color/textViewGrayColor"
+                android:textSize="16dp" />
+
+            <ImageView
+                android:id="@+id/image_intibak_fileStateTranscript"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/no" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="-12dp"
+            android:text="*Zorunlu Alan"
+            android:textColor="@color/red_helper"
+            android:textSize="12dp" />
+
+        <!--Onaylı Ders-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_intibak_fileStateLesson"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/text_view_border"
+                android:onClick="selectFileLesson"
+                android:padding="15dp"
+                android:text="Onaylı Ders Liste Ekle"
+                android:textAllCaps="false"
+                android:textColor="@color/textViewGrayColor"
+                android:textSize="16dp" />
+
+            <ImageView
+                android:id="@+id/image_intibak_fileStateLesson"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="15dp"
+                android:layout_marginTop="30dp"
+                android:src="@drawable/no" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="-12dp"
+            android:text="*Zorunlu Alan"
+            android:textColor="@color/red_helper"
+            android:textSize="12dp" />
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:layout_marginTop="30dp"
-            android:onClick="createPdf"
-            android:text="BAŞVUR"
+            android:onClick="submitIntibak"
+            android:text="Onayla"
             android:textSize="16dp" />
 
     </LinearLayout>
