--- a/app/src/main/res/layout/fragment_my_application.xml
+++ b/app/src/main/res/layout/fragment_my_application.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".StudentHomeFragment.MyApplicationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myApp_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="basvurularım" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
